--- a/src/app/views/request/confirmation/confirmation.component.css
+++ b/src/app/views/request/confirmation/confirmation.component.css
@@ -1,5 +1,5 @@
-div.content{
-    padding-top: 60px;
+div.content {
+    padding-top: 8rem;
     position: relative;
 }
 
@@ -98,7 +98,7 @@ mat-icon {
     bottom: 70px;
 }
 
-.swipper{
+.swipper {
     position: relative;
     max-width: 300px;
     margin: auto;
@@ -235,9 +235,15 @@ mat-icon {
     display: none;
 }
 
-goback{
+goback {
     position: fixed;
     bottom: 0;
     left: 0;
     right: 0;
+    background-color: rgb(2 27 120);
+    color: #FFF;
+    width: 100%;
+    height: 56px;
 }
+
+.special .back {}
