Peer Review changes

--- a/src/app/views/feelings/room/room.component.html
+++ b/src/app/views/feelings/room/room.component.html
@@ -6,8 +6,10 @@
             {{ item.name }}
         </li>
     </ul>
-    <div class="confirmation" *ngIf="selectedItems.length > 0" (click)="confirmSelection()">
-        I am satisfied with my choices
+    <div class="cancelButton">
+        <div class="confirmation" *ngIf="selectedItems.length > 0"  (click)="confirmSelection()">
+            Return
+        </div>
     </div>
 </div>
 
