--- a/src/app/views/feelings/room/room.component.css
+++ b/src/app/views/feelings/room/room.component.css
@@ -1,22 +1,26 @@
 .room{
-    padding-top: 60px;
     height: 100vh;
+    display: grid;
+    grid-template-rows: 60px auto 1fr;
+    padding: 0;
 }
 
 h1 {
     text-align: center;
+    grid-row-start: 2;
 }
 
 .questions {
+    grid-row-start: 3;
     list-style: none;
     padding: 0;
     margin: 0;
     margin-top: 30px;
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-column-gap: 30px;
+    grid-gap: 15px;
     max-width: 260px;
-    margin: auto;
+    margin: 0 auto;
 }
 
 h1 {
@@ -24,10 +28,11 @@ h1 {
 }
 
 .questions{
-    max-height: 75vh;
+    max-height: calc( 100% - 72px);
     overflow: scroll;
     -ms-overflow-style: none;  /* IE and Edge */
     scrollbar-width: none;  /* Firefox */
+    grid-auto-rows: minmax(min-content, max-content);
 }
 
 .questions::-webkit-scrollbar {
@@ -46,10 +51,6 @@ h1 {
     cursor: pointer;
 }
 
-.questions li:not(:last-of-type) {
-    margin-bottom: 15px;
-}
-
 mat-icon {
     display: inline-block;
     width: 100%;
@@ -61,17 +62,20 @@ mat-icon {
 }
 
 .confirmation {
-    display: inline-block;
+    display: block;
+    width: fit-content;
     border-radius: 2.5rem;
     border: 0;
     background-image: none;
-    padding: 25px 50px;
+    padding: 15px 20px;
     font-size: 15px;
     font-weight: 600;
     color: #FFF;
     background-color: #021b78;
     margin-top: 3rem;
     cursor: pointer;
+    position: relative;
+    margin: auto;
 }
 
 .game{
@@ -83,4 +87,14 @@ mat-icon {
     padding: 20px;
     color: white;
     border-radius: 13px 0 0 0;
+}
+.game mat-icon{
+    margin: 0!important;
+}
+
+.cancelButton{
+    bottom: 10px;
+    left: 0;
+    right: 0;
+    position: fixed;
 }
